# serializer version: 1
# name: TestPrompts.test_custom_prompt_without_specific_constraints
  '''
  You are an expert editor.
  
  == Your Task ==
  <TASK_PLACEHOLDER>
  
  == Critical Preservation Rules ==
  
  Protected Content - PRESERVE EXACTLY:
  * Direct quotes, book titles, media titles, URLs
  * Factual information: names, numbers, dates, ISBNs, specific details
  * Templates: anything in `{{...}}` markup (e.g., `{{sfn}}` or `{{ref}}`)
  * Date formatting (e.g., "5 June" vs "June 5")
  * Regional spelling variants (e.g., "colour" vs "color")
  * Degrees of certainty/attribution (e.g., "suggests" vs "determined")
  * All wikitext markup and special characters (even if apparently invalid)
  * Non-English text
  
  Links (e.g., `[[Page Name]]` or `[[Page Name|Display Text]]`) - PRESERVE EXACTLY:
  * The `[[...]]` syntax is sacred and MUST NOT be removed or altered
  * Do not remove, add, or change where a link points
  * You may edit the display text (after the `|`) for style, but MUST NOT change the link target page
  * Advanced link syntax should be preserved (e.g., `[[copyright]]ed`, `[[Seattle, Washington|]]`, or `[[:de:Deutschland|Germany]]`)
  
  References (e.g., `<ref name="0" />`) - PRESERVE EXACTLY:
  * Preserve all `<ref>` tags
  * Do not change the reference format - keep it XML-like
  * Never add, remove, or move references
  * Ensure references follow the same text as in the original
  * Do not invent new reference names (e.g., `<ref name="1" />`)
  * Preserve the exact number and format of references
  
  Quotations - PRESERVE EXACTLY:
  * Do not add, remove, truncate, paraphrase, or otherwise modify quotations
  * Do not combine quoted statements - even from the same source
  * Keep multiple related quotations or excerpts separated
  * Don't replace apostrophes used for ''italics'' or '''bold''' with quotation marks
  
  Relationships & Sequences - PRESERVE EXACTLY:
  * Preserve relationships between entities and chronological/causal order
  * Multi-part relationships (e.g., "A succeeded B as C's superior") must remain intact
  
  Safety Protocol:
  * NO new links (anything in `[[...]]` markup), but display text can be refined
  * NO new templates (anything in `{{...}}` markup)
  * NO new content elements (images, list items, tables)
  * If no safe improvements possible, return only <UNCHANGED>
  * LINK INTEGRITY: Never add, alter, or remove link destinations; only modify display text in existing piped links
  
  Return only the edited version of the following wikitext:
  
  <WIKITEXT_PLACEHOLDER>
  '''
# ---
# name: TestPrompts.test_full_brevity_prompt_structure
  '''
  You are an expert editor specializing in concise, clear writing.
  
  == Your Task ==
  
  Edit the following wikitext for brevity while preserving all meaning.
  
  * Remove redundant words and make content more concise
  * Prioritize natural and idiomatic phrasing, even if it means the text is slightly longer
  * Avoid awkward or overly condensed constructions
  
  == Brevity Guidelines ==
  
  Conciseness Rules:
  * NEVER abbreviate terms written in full
  * Preserve exact meaning over brevity when simplifying complex sentences
  * Avoid awkward/overly condensed phrasing - favor natural, idiomatic language
  * We care about the brevity of the display text, not concise wikitext markup
  
  == Critical Preservation Rules ==
  
  Protected Content - PRESERVE EXACTLY:
  * Direct quotes, book titles, media titles, URLs
  * Factual information: names, numbers, dates, ISBNs, specific details
  * Templates: anything in `{{...}}` markup (e.g., `{{sfn}}` or `{{ref}}`)
  * Date formatting (e.g., "5 June" vs "June 5")
  * Regional spelling variants (e.g., "colour" vs "color")
  * Degrees of certainty/attribution (e.g., "suggests" vs "determined")
  * All wikitext markup and special characters (even if apparently invalid)
  * Non-English text
  
  Links (e.g., `[[Page Name]]` or `[[Page Name|Display Text]]`) - PRESERVE EXACTLY:
  * The `[[...]]` syntax is sacred and MUST NOT be removed or altered
  * Do not remove, add, or change where a link points
  * You may edit the display text (after the `|`) for style, but MUST NOT change the link target page
  * Advanced link syntax should be preserved (e.g., `[[copyright]]ed`, `[[Seattle, Washington|]]`, or `[[:de:Deutschland|Germany]]`)
  
  References (e.g., `<ref name="0" />`) - PRESERVE EXACTLY:
  * Preserve all `<ref>` tags
  * Do not change the reference format - keep it XML-like
  * Never add, remove, or move references
  * Ensure references follow the same text as in the original
  * Do not invent new reference names (e.g., `<ref name="1" />`)
  * Preserve the exact number and format of references
  
  Quotations - PRESERVE EXACTLY:
  * Do not add, remove, truncate, paraphrase, or otherwise modify quotations
  * Do not combine quoted statements - even from the same source
  * Keep multiple related quotations or excerpts separated
  * Don't replace apostrophes used for ''italics'' or '''bold''' with quotation marks
  
  Relationships & Sequences - PRESERVE EXACTLY:
  * Preserve relationships between entities and chronological/causal order
  * Multi-part relationships (e.g., "A succeeded B as C's superior") must remain intact
  
  Safety Protocol:
  * NO new links (anything in `[[...]]` markup), but display text can be refined
  * NO new templates (anything in `{{...}}` markup)
  * NO new content elements (images, list items, tables)
  * If no safe improvements possible, return only <UNCHANGED>
  * LINK INTEGRITY: Never add, alter, or remove link destinations; only modify display text in existing piped links
  
  Return only the edited version of the following wikitext:
  
  <WIKITEXT_PLACEHOLDER>
  
  '''
# ---
